完成商品首页信展示信息开发，完成树状栏目与面包屑栏目，初步完成商品详细信息展示

--- a/dream/view/front/index.html
+++ b/dream/view/front/index.html
@@ -149,7 +149,7 @@
             <div class="layout_1">
               <div class="layout_left">
                <div class="lib_adv_1">
-                 <a target="_blank" href="goods.php?id=63"><img src="http://www.zhongyis.com/data/afficheimg/20120831-0.jpg"></a>            </div>
+                 <a target="_blank" href="goods.php?id=63"><img src="./data/images/TEMP/TB1.jpg"></a>            </div>
                  <div class="blank"></div>
                  <div>
 
@@ -221,62 +221,19 @@
                <div class="lib_mid">
                  <div id="show_new_area" class="tabItem">
                    <div class="grid">
+                    <?php foreach($newlist as $g){?>
                      <div class="goodsItem">
                        <div class="goodsPic">
-                         <a class="preview" href="goods.php?id=66"><img alt="两扣亮黑灰色男士小西服套装D001" src="./view/front/images/66_thumb_G_1301142081870.jpg"></a>
+                         <a class="preview" href="goods.php?id=<?php echo $g['goods_id'];?>"><img alt="<?php echo $g['goods_name'];?>" src="<?php echo $g['thumb_img'];?>"></a>
                        </div>
                        <div class="goodsInfo">
-                         <div class="goodsSn"><a class="f_white" title="两扣亮黑灰色男士小西服套装D001" href="goods.php?id=66">两扣亮黑灰色男士小西服...</a></div>
+                         <div class="goodsSn"><a class="f_white" title="<?php echo $g['goods_name'];?>" href="goods.php?id=<?php echo $g['goods_id'];?>"><?php echo mb_substr($g['goods_name'], 0, 12, 'UTF-8');?>...</a></div>
 
-                         <span class="f_gray">市场价：</span><font class="f_market">￥1198元</font><br>
-                         中意价：<font class="f_shop">￥599元                                                              </font>
+                         <span class="f_gray">市场价：</span><font class="f_market">￥<?php echo $g['market_price'];?>元</font><br>
+                         中意价：<font class="f_shop">￥<?php echo $g['shop_price'];?>元                                                              </font>
                        </div>
                      </div>
-                     <div class="goodsItem">
-                       <div class="goodsPic">
-                         <a class="preview" href="goods.php?id=208"><img alt="平驳圆领角简约1扣女士正装/黑色GC19" src="./view/front/images/208_thumb_G_1301141183961.jpg"></a>
-                       </div>
-                       <div class="goodsInfo">
-                         <div class="goodsSn"><a class="f_white" title="平驳圆领角简约1扣女士正装/黑色GC19" href="goods.php?id=208">平驳圆领角简约1扣女士...</a></div>
-
-                         <span class="f_gray">市场价：</span><font class="f_market">￥998元</font><br>
-                         中意价：<font class="f_shop">￥499元                                                              </font>
-                       </div>
-                     </div>
-                     <div class="goodsItem">
-                       <div class="goodsPic">
-                         <a class="preview" href="goods.php?id=104"><img alt="亮乳白蝴蝶挂扣领袖带褶短袖正装套裙512-3" src="./view/front/images/104_thumb_G_1301129380544.jpg"></a>
-                       </div>
-                       <div class="goodsInfo">
-                         <div class="goodsSn"><a class="f_white" title="亮乳白蝴蝶挂扣领袖带褶短袖正装套裙512-3" href="goods.php?id=104">亮乳白蝴蝶挂扣领袖带褶...</a></div>
-
-                         <span class="f_gray">市场价：</span><font class="f_market">￥698元</font><br>
-                         中意价：<font class="f_shop">￥349元                                                              </font>
-                       </div>
-                     </div>
-                     <div class="goodsItem">
-                       <div class="goodsPic">
-                         <a class="preview" href="goods.php?id=204"><img alt="棉涤泡泡袖修身女士正装衬衫/灰条纹  T002" src="./view/front/images/204_thumb_G_1301023973504.jpg"></a>
-                       </div>
-                       <div class="goodsInfo">
-                         <div class="goodsSn"><a class="f_white" title="棉涤泡泡袖修身女士正装衬衫/灰条纹  T002" href="goods.php?id=204">棉涤泡泡袖修身女士正装...</a></div>
-
-                         <span class="f_gray">市场价：</span><font class="f_market">￥258元</font><br>
-                         中意价：<font class="f_shop">￥129元                                                              </font>
-                       </div>
-                     </div>
-                     <div class="goodsItem">
-                       <div class="goodsPic">
-                         <a class="preview" href="goods.php?id=207"><img alt="枪驳大领腰带装饰后摆褶边时尚1扣女士正装/亮黑色GC20" src="./view/front/images/207_thumb_G_1301142749758.jpg"></a>
-                       </div>
-                       <div class="goodsInfo">
-                         <div class="goodsSn"><a class="f_white" title="枪驳大领腰带装饰后摆褶边时尚1扣女士正装/亮黑色GC20" href="goods.php?id=207">枪驳大领腰带装饰后摆褶...</a></div>
-
-                         <span class="f_gray">市场价：</span><font class="f_market">￥1598元</font><br>
-                         中意价：<font class="f_shop">￥799元                                                              </font>
-                       </div>
-                     </div>
-
+                     <?php }?>
                    </div>
                  </div>                   
                </div>
@@ -311,80 +268,19 @@
                  <div class="grid">
 
 
+                    <?php foreach($flist as $g){?>
+                     <div class="goodsItem">
+                       <div class="goodsPic">
+                         <a class="preview" href="goods.php?id=<?php echo $g['goods_id'];?>"><img alt="<?php echo $g['goods_name'];?>" src="<?php echo $g['thumb_img'];?>"></a>
+                       </div>
+                       <div class="goodsInfo">
+                         <div class="goodsSn"><a class="f_white" title="<?php echo $g['goods_name'];?>" href="goods.php?id=<?php echo $g['goods_id'];?>"><?php echo mb_substr($g['goods_name'], 0, 12, 'UTF-8');?>...</a></div>
 
-                  <div class="goodsItem">
-                   <div class="goodsPic">
-                    <a class="preview" href="goods.php?id=192"><img alt="纯白斜条棉涤女士衬衫2620" src="./view/front/images/192_thumb_G_1308279122357.jpg"></a>
-                  </div>
-                  <div class="goodsInfo">
-                   <div class="goodsSn"><a class="f_pname" title="纯白斜条棉涤女士衬衫2620" href="goods.php?id=192">纯白斜条棉涤女士衬衫2...</a></div>
-                   <span class="f_gray">市场价：</span><font class="f_market">￥84元</font><br>
-                   中意价：<font class="f_shop">￥42元                                                                  </font>
-                 </div>
-               </div>                   
-
-
-
-
-
-               <div class="goodsItem">
-                 <div class="goodsPic">
-                  <a class="preview" href="goods.php?id=209"><img alt="枪驳大领面后开叉短款两扣女士正装GC18" src="./view/front/images/209_thumb_G_1301191658576.jpg"></a>
-                </div>
-                <div class="goodsInfo">
-                 <div class="goodsSn"><a class="f_pname" title="枪驳大领面后开叉短款两扣女士正装GC18" href="goods.php?id=209">枪驳大领面后开叉短款两...</a></div>
-                 <span class="f_gray">市场价：</span><font class="f_market">￥1198元</font><br>
-                 中意价：<font class="f_shop">￥599元                                                                  </font>
-               </div>
-             </div>                   
-
-
-
-
-
-             <div class="goodsItem">
-               <div class="goodsPic">
-                <a class="preview" href="goods.php?id=302"><img alt="双层青果领后腰褶摆一扣女士正装套裤/黑色GC22" src="./view/front/images/302_thumb_G_1346503936019.jpg"></a>
-              </div>
-              <div class="goodsInfo">
-               <div class="goodsSn"><a class="f_pname" title="双层青果领后腰褶摆一扣女士正装套裤/黑色GC22" href="goods.php?id=302">双层青果领后腰褶摆一扣...</a></div>
-               <span class="f_gray">市场价：</span><font class="f_market">￥998元</font><br>
-               中意价：<font class="f_shop">￥499元                                                                  </font>
-             </div>
-           </div>                   
-
-
-
-
-
-           <div class="goodsItem">
-             <div class="goodsPic">
-              <a class="preview" href="goods.php?id=303"><img alt="泡泡袖后中衩一扣女士正装套裤/黑色GC23" src="./view/front/images/303_thumb_G_1346504995304.jpg"></a>
-            </div>
-            <div class="goodsInfo">
-             <div class="goodsSn"><a class="f_pname" title="泡泡袖后中衩一扣女士正装套裤/黑色GC23" href="goods.php?id=303">泡泡袖后中衩一扣女士正...</a></div>
-             <span class="f_gray">市场价：</span><font class="f_market">￥698元</font><br>
-             中意价：<font class="f_shop">￥349元                                                                  </font>
-           </div>
-         </div>                   
-
-
-
-
-
-         <div class="goodsItem">
-           <div class="goodsPic">
-            <a class="preview" href="goods.php?id=305"><img alt="枪驳大领面简约2扣女士正装套裙/黑色815" src="./view/front/images/305_thumb_G_1346501380926.jpg"></a>
-          </div>
-          <div class="goodsInfo">
-           <div class="goodsSn"><a class="f_pname" title="枪驳大领面简约2扣女士正装套裙/黑色815" href="goods.php?id=305">枪驳大领面简约2扣女士...</a></div>
-           <span class="f_gray">市场价：</span><font class="f_market">￥998元</font><br>
-           中意价：<font class="f_shop">￥499元                                                                  </font>
-         </div>
-       </div>                   
-
-
-
+                         <span class="f_gray">市场价：</span><font class="f_market">￥<?php echo $g['market_price'];?>元</font><br>
+                         中意价：<font class="f_shop">￥<?php echo $g['shop_price'];?>元                                                              </font>
+                       </div>
+                     </div>
+                     <?php }?>        
 
      </div>
    </div>                   
@@ -417,82 +313,19 @@
 <div class="lib_mid">                
  <div class="tabItem">
    <div class="grid">
+                <?php foreach($mlist as $g){?>
+                     <div class="goodsItem">
+                       <div class="goodsPic">
+                         <a class="preview" href="goods.php?id=<?php echo $g['goods_id'];?>"><img alt="<?php echo $g['goods_name'];?>" src="<?php echo $g['thumb_img'];?>"></a>
+                       </div>
+                       <div class="goodsInfo">
+                         <div class="goodsSn"><a class="f_white" title="<?php echo $g['goods_name'];?>" href="goods.php?id=<?php echo $g['goods_id'];?>"><?php echo mb_substr($g['goods_name'], 0, 12, 'UTF-8');?>...</a></div>
 
-
-
-    <div class="goodsItem">
-     <div class="goodsPic">
-      <a class="preview" href="goods.php?id=315"><img alt="两扣双开衩平驳头斜兜男士西服套装3312/纯藏青色人字纹/羊毛+涤纶" src="./view/front/images/315_thumb_G_1346659439530.jpg"></a>
-    </div>
-    <div class="goodsInfo">
-     <div class="goodsSn"><a class="f_pname" title="两扣双开衩平驳头斜兜男士西服套装3312/纯藏青色人字纹/羊毛+涤纶" href="goods.php?id=315">两扣双开衩平驳头斜兜男...</a></div>
-     <span class="f_gray">市场价：</span><font class="f_market">￥1598元</font><br>
-     中意价：<font class="f_shop">￥799元                                                                  </font>
-   </div>
- </div>                   
-
-
-
-
-
- <div class="goodsItem">
-   <div class="goodsPic">
-    <a class="preview" href="goods.php?id=313"><img alt="纯羊毛一粒扣枪驳领纯黑西服套装" src="./view/front/images/313_thumb_G_1346420329070.jpg"></a>
-  </div>
-  <div class="goodsInfo">
-   <div class="goodsSn"><a class="f_pname" title="纯羊毛一粒扣枪驳领纯黑西服套装" href="goods.php?id=313">纯羊毛一粒扣枪驳领纯黑...</a></div>
-   <span class="f_gray">市场价：</span><font class="f_market">￥3980元</font><br>
-   中意价：<font class="f_shop">￥999元                                </font>
- </div>
-</div>                   
-
-
-
-
-
-<div class="goodsItem">
- <div class="goodsPic">
-  <a class="preview" href="goods.php?id=317"><img alt="两扣单开衩枪驳领修身男士西服套装ZYS900/纯深藏青色/羊毛+涤纶" src="./view/front/images/317_thumb_G_1346661429032.jpg"></a>
-</div>
-<div class="goodsInfo">
- <div class="goodsSn"><a class="f_pname" title="两扣单开衩枪驳领修身男士西服套装ZYS900/纯深藏青色/羊毛+涤纶" href="goods.php?id=317">两扣单开衩枪驳领修身男...</a></div>
- <span class="f_gray">市场价：</span><font class="f_market">￥1398元</font><br>
- 中意价：<font class="f_shop">￥699元                                                                  </font>
-</div>
-</div>                   
-
-
-
-
-
-<div class="goodsItem">
- <div class="goodsPic">
-  <a class="preview" href="goods.php?id=318"><img alt="两扣单开衩枪驳领修身男士西服套装ZYS6028/深藏青蓝条纹" src="./view/front/images/318_thumb_G_1346662515966.jpg"></a>
-</div>
-<div class="goodsInfo">
- <div class="goodsSn"><a class="f_pname" title="两扣单开衩枪驳领修身男士西服套装ZYS6028/深藏青蓝条纹" href="goods.php?id=318">两扣单开衩枪驳领修身男...</a></div>
- <span class="f_gray">市场价：</span><font class="f_market">￥1398元</font><br>
- 中意价：<font class="f_shop">￥699元                                                                  </font>
-</div>
-</div>                   
-
-
-
-
-
-<div class="goodsItem">
- <div class="goodsPic">
-  <a class="preview" href="goods.php?id=316"><img alt="两扣单开衩枪驳领斜兜男士西服套装ZW03/黑色条纹/纯羊毛" src="./view/front/images/316_thumb_G_1346660690951.jpg"></a>
-</div>
-<div class="goodsInfo">
- <div class="goodsSn"><a class="f_pname" title="两扣单开衩枪驳领斜兜男士西服套装ZW03/黑色条纹/纯羊毛" href="goods.php?id=316">两扣单开衩枪驳领斜兜男...</a></div>
- <span class="f_gray">市场价：</span><font class="f_market">￥2598元</font><br>
- 中意价：<font class="f_shop">￥1299元                                                                  </font>
-</div>
-</div>                   
-
-
-
+                         <span class="f_gray">市场价：</span><font class="f_market">￥<?php echo $g['market_price'];?>元</font><br>
+                         中意价：<font class="f_shop">￥<?php echo $g['shop_price'];?>元                                                              </font>
+                       </div>
+                     </div>
+                     <?php }?>                  
 
 </div>
 </div>                   
