购物车前台实现计算展示

--- a/dream/view/front/shangpin.html
+++ b/dream/view/front/shangpin.html
@@ -208,7 +208,7 @@
                    <strong style=" font-weight: bold; color:#666; ">商品总价：</strong><font id="ECS_GOODS_AMOUNT" class="shop">￥<?php echo $g['shop_price'];?>元</font>
                  </div>
                  <div class="f_r">
-                  <a href="#"><img src="./view/front/images/bnt_cat.gif"></a>
+                  <a href="flow.php?cat=buy&goods_id=<?php echo $g['goods_id'];?>&num=1"><img src="./view/front/images/bnt_cat.gif"></a>
                 </div> 
               </li>
             </ul>
