完成下订单记录订单与流水数据

--- a/dream/view/front/order.html
+++ b/dream/view/front/order.html
@@ -33,11 +33,11 @@
         
                 
         <div style="margin:30px auto 70px auto;" class="flowBox">
-         <h6 style="text-align:center; height:30px; line-height:30px; font-size:14px; background:#fff; color:#333333; font-weight:bold">感谢选购Dream商城正装！您的订单已提交成功，请记住您的订单号: <font style="color:red">2012122177102</font></h6>
+         <h6 style="text-align:center; height:30px; line-height:30px; font-size:14px; background:#fff; color:#333333; font-weight:bold">感谢选购Dream商城正装！您的订单已提交成功，请记住您的订单号: <font style="color:red"><?php echo $order_sn;?></font></h6>
           <table width="100%" cellspacing="0" cellpadding="15" border="0" bgcolor="#fff" align="center" style="border:1px solid #ddd; margin:20px auto;">
             <tbody><tr>
               <td bgcolor="#FFFFFF" align="center">
-              您选定的配送方式为: <strong>到实体店试穿取货</strong>，您选定的支付方式为: <strong>网上支付</strong>。您的应付款金额为: <strong>￥999.00元</strong>
+              您选定的配送方式为: <strong>到实体店试穿取货</strong>，您选定的支付方式为: <strong>网上支付</strong>。您的应付款金额为: <strong>￥<?php echo $total;;?>元</strong>
               </td>
             </tr>
             <tr>
