面向对象的方式写了个分页导航工具类,完成商城的分页功能

--- a/dream/view/front/header.html
+++ b/dream/view/front/header.html
@@ -16,7 +16,7 @@
 
 
  欢迎光临Dream商城！&nbsp;&nbsp;&nbsp;&nbsp;
- <a href="login.php">登录</a> | <a href="#">注册</a>
+ <a href="login.php">登录</a> | <a href="reg.php">注册</a>
 
 <?php } ?>
 
